samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-ratings-v2-mysql-vm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratings
    version: v2-mysql-vm
  name: ratings-v2-mysql-vm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v2-mysql-vm
  template:
    metadata:
      labels:
        app: ratings
        version: v2-mysql-vm
    spec:
      containers:
        - env:
            - name: DB_TYPE
              value: mysql
            - name: MYSQL_DB_HOST
              value: mysqldb.vm.svc.cluster.local
            - name: MYSQL_DB_PORT
              value: '3306'
            - name: MYSQL_DB_USER
              value: root
            - name: MYSQL_DB_PASSWORD
              value: password
          image: registry.istio.io/release/examples-bookinfo-ratings-v2:1.20.3
          imagePullPolicy: IfNotPresent
          name: ratings
          ports:
            - containerPort: 9080
