samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-ratings-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ratings
    version: v2
  name: ratings-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v2
  template:
    metadata:
      labels:
        app: ratings
        version: v2
    spec:
      containers:
        - env:
            - name: MONGO_DB_URL
              value: mongodb://mongodb:27017/test
          image: registry.istio.io/release/examples-bookinfo-ratings-v2:1.20.3
          imagePullPolicy: IfNotPresent
          name: ratings
          ports:
            - containerPort: 9080
      serviceAccountName: bookinfo-ratings-v2
