samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-reviews-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reviews
    version: v2
  name: reviews-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      labels:
        app: reviews
        version: v2
    spec:
      containers:
        - env:
            - name: LOG_DIR
              value: /tmp/logs
          image: registry.istio.io/release/examples-bookinfo-reviews-v2:1.20.3
          imagePullPolicy: IfNotPresent
          name: reviews
          ports:
            - containerPort: 9080
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - mountPath: /opt/ibm/wlp/output
              name: wlp-output
      volumes:
        - emptyDir: {}
          name: wlp-output
        - emptyDir: {}
          name: tmp
