samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodb
    service: mongodb
  name: mongodb
spec:
  ports:
    - name: mongo
      port: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodb
    version: v1
  name: mongodb-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      version: v1
  template:
    metadata:
      labels:
        app: mongodb
        version: v1
    spec:
      containers:
        - args:
            - --ipv6
            - --bind_ip_all
          image: registry.istio.io/release/examples-bookinfo-mongodb:1.20.3
          imagePullPolicy: IfNotPresent
          name: mongodb
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: data-db
      volumes:
        - emptyDir: {}
          name: data-db
