samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-details-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: details
    service: details
  name: details
spec:
  ipFamilies:
    - IPv6
    - IPv4
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 9080
  selector:
    app: details
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: details
    version: v1
  name: details-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      labels:
        app: details
        version: v1
    spec:
      containers:
        - image: registry.istio.io/release/examples-bookinfo-details-v1:1.20.3
          imagePullPolicy: IfNotPresent
          name: details
          ports:
            - containerPort: 9080
