samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysqldb
    service: mysqldb
  name: mysqldb
spec:
  ports:
    - name: tcp
      port: 3306
  selector:
    app: mysqldb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysqldb
    version: v1
  name: mysqldb-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
      version: v1
  template:
    metadata:
      labels:
        app: mysqldb
        version: v1
    spec:
      containers:
        - args:
            - --default-authentication-plugin
            - mysql_native_password
          image: registry.istio.io/release/examples-bookinfo-mysqldb:1.20.3
          imagePullPolicy: IfNotPresent
          name: mysqldb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: var-lib-mysql
      volumes:
        - emptyDir: {}
          name: var-lib-mysql
