samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-ratings-discovery-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ratings
    service: ratings
  name: ratings
spec:
  ipFamilies:
    - IPv6
    - IPv4
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 9080
  selector:
    app: ratings
