samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-ratings-discovery.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ratings
    service: ratings
  name: ratings
spec:
  ports:
    - name: http
      port: 9080
  selector:
    app: ratings
