samples/bookinfo/.refactoring/generated/platform/kube/bookinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: gateway
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /productpage
            pathType: Exact
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /static/
            pathType: Prefix
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /login
            pathType: Exact
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /logout
            pathType: Exact
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /api/v1/products
            pathType: Prefix
